DTSPB-5446 & 5461 merge conflict fixes.